mendel-minimal (6-1) mendel-beaker; urgency=medium

  * set-datetime: Make timesyncd behave in the face of broken time
  * ssh: Disable password authentication

 -- Coral <coral-support@google.com>  Tue, 26 Feb 2019 11:32:18 -0800

mendel-minimal (6-1) mendel-beaker; urgency=medium

  * Updates set-datetime to sync to the hardware clock using hwclock and sets
    systemd-timesyncd's timestamp file to ensure persistence across reboots.

 -- Coral <coral-support@google.com>  Thu, 21 Feb 2019 11:31:00 -0800

mendel-minimal (5-1) mendel-beaker; urgency=medium

  * Fixes set-datetime to stop timesyncd and restart it when
    setting the time.

 -- Coral <coral-support@google.com>  Mon, 28 Jan 2019 13:31:00 -0800

mendel-minimal (4-1) mendel-beaker; urgency=medium

  * Fixes the set-datetime runonce script to make use of timedatectl for
    force write its timestamp to disk.

 -- Coral <coral-support@google.com>  Mon, 28 Jan 2019 13:31:00 -0800

mendel-minimal (3-1) mendel-beaker; urgency=medium

  * Reverts the multistrap source lists change below.

 -- Coral <coral-support@google.com>  Thu, 24 Jan 2019 17:13:00 -0800

mendel-minimal (2-1) mendel-beaker; urgency=medium

  * Collapes multistrap source lists into single file

 -- Coral <coral-support@google.com>  Tue, 22 Jan 2019 13:13:27 -0800

mendel-minimal (1-1) mendel-beaker; urgency=medium

  * Cut for beaker release and normalization of version.
  * Add in a MAC address generation and storage script.
  * Migrate runonce into its own package.

 -- Coral <coral-support@google.com>  Wed, 16 Jan 2019 12:00:00 -0800

mendel-minimal (0.1) animal; urgency=medium

  * Initial release.

 -- Coral <coral-support@google.com>  Wed, 12 Sep 2018 16:14:00 -0800