@@ -1,0 +1,5 @@
+# Set the default LANG to something sensible if it is unset
+if [ -z "$LANG" ]; then
+    source /etc/locale.conf
+    export LANG
+fi
